# HealthRiskAnalysis

./: README.md  pyproject.toml
HeartAttackRisk/: project.py
HeartAttackRisk2.0/: gui.py  project.py  scaler.pkl  svc_model.pkl
docs/: Python_Project (1).docx
src/healthriskanalysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
