[project]
name = "healthriskanalysis"
version = "0.1.0"
description = "Health risk analysis tool"
authors = [
  { name="Senin Adın", email="senin@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
